# mb-rl7023-11_rust_example

./: Cargo.toml  Embed.toml  README.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
bp35a1-rs/: Cargo.toml
bp35a1-rs/src/: command.rs  lib.rs  parser.rs  write.rs
src/: .gitignore  main.rs  rename-to-broute_credential.rs
tools/: check_smart_meter.py
